# writein-count

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/pencil-multnomah-2026/: config.toml
pencilcount/: __init__.py  build_manifest.py  build_report_v2.py  common.py  config.py  db.py  official_results.json  reconcile.py  run.py  stage0_manifest.py  stage1_classify.py  stage2_locate.py  stage3_mark.py  stage4_read.py  stage5_match.py  telemetry.py
